--- a/app/src/main/res/layout/fragment_collabs.xml
+++ b/app/src/main/res/layout/fragment_collabs.xml
@@ -6,29 +6,27 @@
     android:layout_height="match_parent">
 
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
 
-        android:layout_marginVertical="25dp"
-        android:orientation="horizontal"
-        >
+<!--        android:layout_marginVertical="25dp"-->
+<!--        android:orientation="horizontal"-->
+<!--        >-->
 
-        <Button
-            android:id="@+id/toggle_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:layout_marginHorizontal="15dp"
-            android:layout_weight="1"
-            android:backgroundTint="@color/niceGreen"
-            android:text="My Collab Requests"
-            android:textColor="@color/white" />
+<!--        <Button-->
+<!--            android:id="@+id/toggle_btn"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:layout_marginHorizontal="15dp"-->
+<!--            android:layout_weight="1"-->
+<!--            android:backgroundTint="@color/niceGreen"-->
+<!--            android:text="My Collab Requests"-->
+<!--            android:textColor="@color/white" />-->
 
-    </LinearLayout>
-
-
+<!--    </LinearLayout>-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/artists_list_recycler_view"
@@ -36,7 +34,7 @@
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:paddingBottom="350dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.47"
@@ -49,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="60dp"
         android:clipToPadding="false"
         android:paddingBottom="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +55,8 @@
         app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.067" />
+        app:layout_constraintVertical_bias="0.067"
+        />
 
     <TextView
         android:id="@+id/tv_empty_msg"
@@ -69,99 +68,25 @@
         android:visibility="gone"
     />
 
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/toggle_btn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="26dp"
+        android:clickable="true"
+        android:elevation="8dp"
+        android:focusable="true"
+        android:textSize="16sp"
+        app:iconTint="@color/black"
+        app:iconSize="24dp"
+        app:iconPadding="8dp"
+        app:rippleColor="@color/white"
+        android:backgroundTint="@color/niceGreen"
+        android:text="My Collab Requests"
+        android:textColor="@color/white"
+        />
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <!-- Toolbar -->
-
-    <!--    <androidx.appcompat.widget.Toolbar-->
-    <!--        android:id="@+id/toolbar"-->
-    <!--        android:layout_width="408dp"-->
-    <!--        android:layout_height="51dp"-->
-    <!--        android:background="?attr/colorPrimary"-->
-    <!--        android:titleTextColor="@android:color/white"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.0"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        app:layout_constraintVertical_bias="0.0"-->
-    <!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
-
-    <!--        &lt;!&ndash; Button inside the Toolbar &ndash;&gt;-->
-
-    <!--        <Button-->
-    <!--            android:id="@+id/btn_messages"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:layout_gravity="end"-->
-    <!--            android:background="@android:color/transparent"-->
-    <!--            android:text="Messages"-->
-    <!--            android:textColor="@android:color/white" />-->
-
-    <!--        <Button-->
-    <!--            android:id="@+id/btn_home"-->
-    <!--            android:layout_width="wrap_content"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:layout_gravity="end"-->
-    <!--            android:background="@android:color/transparent"-->
-    <!--            android:text="Home"-->
-    <!--            android:textColor="@android:color/white" />-->
-
-
-    <!--    </androidx.appcompat.widget.Toolbar>-->
-
-
-
-    <!--    <Button-->
-    <!--        android:id="@+id/btn_search"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/btn_search"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.329"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/txte_sa_search"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
-    <!--        app:layout_constraintVertical_bias="0.033" />-->
-
-    <!--    <EditText-->
-    <!--        android:id="@+id/txte_sa_search"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:ems="10"-->
-    <!--        android:importantForAutofill="no"-->
-    <!--        android:inputType="text"-->
-    <!--        android:minHeight="48dp"-->
-    <!--        android:text=""-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.099"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/toolbar"-->
-    <!--        app:layout_constraintVertical_bias="0.033" />-->
-
-    <!--    <RadioButton-->
-    <!--        android:id="@+id/rbtn_sa_users"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/rbtn_sa_users"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.126"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/txte_sa_search"-->
-    <!--        app:layout_constraintVertical_bias="0.074" />-->
-
-    <!--    <RadioButton-->
-    <!--        android:id="@+id/rbtn_sa_bands"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:text="@string/rbtn_sa_bands"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.559"-->
-    <!--        app:layout_constraintStart_toEndOf="@+id/rbtn_sa_users"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/btn_search"-->
-    <!--        app:layout_constraintVertical_bias="0.074" />-->
-    <!--    -->
 
