--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,16 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:andriod="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/song_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
+        android:id="@+id/song_list_recycler_view"
+        android:layout_marginTop="110dp"
         android:clipToPadding="false"
         android:paddingBottom="350dp" />
 
@@ -23,14 +25,66 @@
         android:clickable="true"
         android:elevation="100dp"
         android:focusable="true"
-
         android:src="@drawable/add_song_3"
-
-
         app:fabCustomSize="70dp"
         app:maxImageSize="60dp"
-
         app:tint="@null" />
 
+    <!-- Buttons container -->
+    <LinearLayout
+        android:id="@+id/button_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:gravity="start"
+        android:orientation="horizontal"
+        android:layout_marginTop="50dp"
+        android:padding="10dp">
+
+<!--        <Button-->
+<!--            android:id="@+id/btn_sign_in"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Sign In"-->
+<!--            android:textSize="13dp"-->
+<!--            android:padding="10dp"-->
+<!--            android:backgroundTint="@color/green"-->
+<!--            android:textColor="@android:color/white"-->
+<!--            android:layout_marginTop="8dp" />-->
+
+        <Button
+            android:id="@+id/favorite_filter_btn"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="8dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:text="My Favorite Songs"
+            android:textSize="14sp"
+            android:backgroundTint="@color/darkgray"
+            android:textColor="@android:color/white"
+            />
+
+        <Button
+            android:id="@+id/publish_filter_btn"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="13dp"
+            android:layout_height="45dp"
+            android:layout_marginEnd="8dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:text="Published By Me"
+            android:textSize="14sp"
+            android:backgroundTint="@color/darkgray"
+            android:textColor="@android:color/white"
+            />
+
+
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
