--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -95,8 +95,26 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/collabs_list"
                 android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:orientation="horizontal" />
+
+
+            <TextView
+                android:id="@+id/my_songs_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="My Songs"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginBottom="8dp"
+                android:paddingStart="8dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/my_songs_list"
+                android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:orientation="horizontal" />
+
 
         </LinearLayout>
     </ScrollView>
